--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Sarath Kumar</a></li>
+								<li class="current"><a href="index.html">Home</a></li>
 								<li>
 									<a href="#">Projects ↓ </a>
 									<ul>
@@ -39,9 +39,9 @@
 										</li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
+								<!--<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="no-sidebar.html">No Sidebar</a></li>-->
 							</ul>
 						</nav>
 
@@ -53,16 +53,17 @@
 				<div class="container">
 					<p class="style1">Let me introduce myself properly ...</p>
 					<p class="style2">
-						5+ years of experience in Web applications development with active involvement in all phases of SDLC
+						Full-stack Java developer with 5.5+ years of experience in all SDLC phases, adhering to Agile methodologies.
 					</p>
-					<ul >
-						<li>It's <strong>responsive</strong></li>
-						<li>Built on <strong>HTML5</strong> and <strong>CSS3</strong></li>
-						<li>Released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0 license</a></li>
-						<li>Use it for any of your personal or commercial projects &ndash; just be sure to credit us!</li>
-					</ul>
+					<ul class="style3">
+						<li><strong>DevOps Practitioner</strong> proficient in cloud environments (AWS, GCP, and K8S containerization ) and CI/CD tools (Jenkins, Ant, Maven, and Gradle). Experienced in architecting and managing complex cloud networking infrastructure on AWS.</li>
+						<li><strong>Platform Architect</strong> with experience in decomposing monolithic architectures into microservices and designing a suite of services and libraries to accelerate infrastructure development and deliver innovative features.</li>
+						<li><strong>Database Expert</strong> with expertise in SQL and NoSQL DBs, skilled in query optimization techniques like indexing and normalization, and developing ETL workflows and pipelines using parallelization and data partitioning.</li>
+						<li><strong>Integration Engineer</strong> leveraging Dell Boomi and Apigee to integrate Salesforce, internal microservices, and 3rd party payment platforms.</li>
+						<li><strong>Data Processing Specialist</strong> with experience designing, developing, and maintaining Kafka, Quartz and Redis caching based messaging/streaming services, enhancing service availability and responsiveness by more than 50%.</li>
+						</ul>
 					<ul class="actions">
-						<li><a href="#" class="button style3 large">Proceed</a></li>
+						<li><a href="projects.html" class="button style3 large">Go to Projects</a></li>
 					</ul>
 				</div>
 			</section>
@@ -70,56 +71,59 @@
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
-					<div class="title">The Details</div>
+					<div class="title">Professional Skills</div>
 					<div class="container">
 
 						<!-- Image -->
-							<a href="#" class="image featured">
+							<!--<a href="#" class="image featured">
 								<img src="images/pic01.jpg" alt="" />
-							</a>
+							</a>-->
 
 						<!-- Features -->
 							<section id="features">
 								<header class="style1">
-									<h2>Dolor consequat feugiat amet veroeros</h2>
-									<p>Feugiat dolor nullam orci pretium phasellus justo</p>
+									<h2>Languages, Tools and Frameworks</h2>
+									<!--<p>Feugiat dolor nullam orci pretium phasellus justo</p>-->
 								</header>
 								<div class="feature-list">
 									<div class="row">
 										<div class="col-6 col-12-medium">
 											<section>
-												<h3 class="icon fa-comment">Mattis velit diam vulputate</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
+												<h3 class="icon solid fa-check">Programming and Web Technologies</h3>
+												<p>Java 8/11/17, J2EE, Python, JavaScript, HTML, CSS, Excel VBA</p>
+												<p>Spring-Boot, Apache Kafka, Quartz, Redis, React (Node.js), Module Federation (Webpack), ETL workflows, langchain4j LLM RESTful Services,
+													SOAP, JMX, JMS, AJAX, SaaS</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
-												<h3 class="icon solid fa-sync">Lorem ipsum dolor sit veroeros</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
+												<h3 class="icon solid fa-check">Data Access</h3>
+												<p><strong>SQL DBs:</strong> MySQL, MSSQL, Oracle 11g/12c, Salesforce SOQL</p>
+												<p><strong>NoSQL DBs:</strong> Cassandra, Redis Distributed Cache, MongoDB</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
-												<h3 class="icon fa-image">Pretium phasellus justo lorem</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
+												<h3 class="icon solid fa-check">Continuous Integration/Deployment</h3>
+												<p>Jenkins, Maven, Gradle, Artifactory, Nexus, Docker, Kubernetes, Terraform</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
-												<h3 class="icon solid fa-cog">Tempus sed pretium orci</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
+												<h3 class="icon solid fa-check">Quality Assurance & Testing</h3>
+												<p>Selenium, Logstash, Kibana, Junit, Mockito, SonarQube, Oracle Cloud Infrastructure (OCI)</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
-												<h3 class="icon solid fa-wrench">Aliquam consequat et feugiat</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
+												<h3 class="icon solid fa-check">Integration Architect Tools</h3>
+												<p>Dell Boomi, Apigee</p>
 											</section>
 										</div>
 										<div class="col-6 col-12-medium">
 											<section>
-												<h3 class="icon solid fa-check">Dolore laoreet aliquam mattis</h3>
-												<p>Eget mattis at, laoreet vel et velit aliquam diam ante, aliquet sit amet vulputate et magna feugiat laoreet vel velit lorem.</p>
+												<h3 class="icon solid fa-check">Version Control</h3>
+												<p>GitHub, GitLab, SVN, Bitbucket</p>
 											</section>
 										</div>
 									</div>
