--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 						</ul>
 					<ul class="actions">
 						<li><a href="projects.html" class="button style3 large">Go to Projects</a></li>
+						<li><a href="https://flowcv.com/resume/0onlhsa9cf" target="_blank" class="button style1 large">Resume</a></li>
 					</ul>
 				</div>
 			</section>
@@ -129,15 +130,16 @@
 									</div>
 								</div>
 								<ul class="actions special">
-									<li><a href="#" class="button style1 large">Get Started</a></li>
-									<li><a href="#" class="button style2 large">More Info</a></li>
+									<li><a href="#" class="button style3 large">Go to Projects</a></li>
+									<li><a href="https://flowcv.com/resume/0onlhsa9cf" target="_blank" class="button style1 large">Resume</a></li>
+									<!--<li><a href="#" class="button style2 large">More Info</a></li>-->
 								</ul>
 							</section>
 
 					</div>
 				</section>
 
-			<!-- Highlights -->
+			<!--&lt;!&ndash; Highlights &ndash;&gt;
 				<section id="highlights" class="wrapper style3">
 					<div class="title">The Endorsements</div>
 					<div class="container">
@@ -174,23 +176,18 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section>-->
 
 			<!-- Footer -->
 				<section id="footer" class="wrapper">
-					<div class="title">The Rest Of It</div>
+					<div class="title">Contact</div>
 					<div class="container">
 						<header class="style1">
-							<h2>Ipsum sapien elementum portitor?</h2>
-							<p>
-								Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br />
-								Nam pharetra laoreet imperdiet volutpat etiam feugiat.
-							</p>
+							<h2>Please feel free to contact me</h2>
 						</header>
-						<div class="row">
-							<div class="col-6 col-12-medium">
+							<!--<div class="col-6 col-12-medium">
 
-								<!-- Contact Form -->
+								&lt;!&ndash; Contact Form &ndash;&gt;
 									<section>
 										<form method="post" action="#">
 											<div class="row gtr-50">
@@ -213,58 +210,54 @@
 										</form>
 									</section>
 
-							</div>
-							<div class="col-6 col-12-medium">
-
+							</div>-->
 								<!-- Contact -->
-									<section class="feature-list small">
-										<div class="row">
-											<div class="col-6 col-12-small">
-												<section>
-													<h3 class="icon solid fa-home">Mailing Address</h3>
-													<p>
-														Untitled Corp<br />
-														1234 Somewhere Rd<br />
-														Nashville, TN 00000
-													</p>
-												</section>
-											</div>
-											<div class="col-6 col-12-small">
-												<section>
-													<h3 class="icon solid fa-comment">Social</h3>
-													<p>
-														<a href="#">@untitled-corp</a><br />
-														<a href="#">linkedin.com/untitled</a><br />
-														<a href="#">facebook.com/untitled</a>
-													</p>
-												</section>
-											</div>
-											<div class="col-6 col-12-small">
-												<section>
-													<h3 class="icon solid fa-envelope">Email</h3>
-													<p>
-														<a href="#">info@untitled.tld</a>
-													</p>
-												</section>
-											</div>
-											<div class="col-6 col-12-small">
-												<section>
-													<h3 class="icon solid fa-phone">Phone</h3>
-													<p>
-														(000) 555-0000
-													</p>
-												</section>
-											</div>
-										</div>
-									</section>
-
-							</div>
+						<div class="col-1 col-12 medium">
+							<!-- Contact -->
+							<section class="feature-list medium">
+								<div class="row">
+									<div class="col-6 col-12-small">
+										<section>
+											<h3 class="icon solid fa-home">Address</h3>
+											<p>
+												Toronto<br />
+												Canada, M1H 3H5<br />
+											</p>
+										</section>
+									</div>
+									<div class="col-6 col-12-small">
+										<section>
+											<h3 class="icon solid fa-comment">Social</h3>
+											<p>
+												<a href="https://www.linkedin.com/in/sarathkumarnadavalur/" target="_blank">LinkedIn</a><br />
+												<a href="mailto:sarath.nadavalur@gmail.com">sarath.nadavalur@gmail.com</a><br />
+											</p>
+										</section>
+									</div>
+									<!--<div class="col-6 col-12-small">
+										<section>
+											<h3 class="icon solid fa-envelope">Email</h3>
+											<p>
+												<a href="#">info@untitled.tld</a>
+											</p>
+										</section>
+									</div>
+									<div class="col-6 col-12-small">
+										<section>
+											<h3 class="icon solid fa-phone">Phone</h3>
+											<p>
+												(000) 555-0000
+											</p>
+										</section>
+									</div>-->
+								</div>
+							</section>
 						</div>
-						<div id="copyright">
-							<ul>
-								<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
+					</div>
+					<div id="copyright">
+						<ul>
+							<li>Sarath Kumar Nadavalur</li><li>Designed using: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+						</ul>
 					</div>
 				</section>
 
