Added License Management Page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="/images/portfolio_ico.jpg" sizes="48x48">
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -26,7 +27,7 @@
 								<li>
 									<a href="#">Projects ↓ </a>
 									<ul>
-										<li><a href="#">Kafka Based - License Lifecycle Management</a></li>
+										<li><a href="../portfolio/projects/license_mgmt.html">Kafka Based - License Lifecycle Management</a></li>
 										<li><a href="#">Billing/Invoice Management</a></li>
 										<li>
 											<a href="#">Java Based Libraries</a>
@@ -130,7 +131,7 @@
 									</div>
 								</div>
 								<ul class="actions special">
-									<li><a href="#" class="button style3 large">Go to Projects</a></li>
+									<li><a href="projects.html" class="button style3 large">Go to Projects</a></li>
 									<li><a href="https://flowcv.com/resume/0onlhsa9cf" target="_blank" class="button style1 large">Resume</a></li>
 									<!--<li><a href="#" class="button style2 large">More Info</a></li>-->
 								</ul>
