--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="/images/portfolio_ico.jpg" sizes="48x48">
+		<link rel="icon" href="/images/portfolio_ico.ico" sizes="48x48">
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
