Added Billing Statements page

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 									<a href="#">Projects ↓ </a>
 									<ul>
 										<li><a href="../portfolio/projects/license_mgmt.html">Kafka Based - License Lifecycle Management</a></li>
-										<li><a href="#">Billing/Invoice Management</a></li>
-										<li>
+										<li><a href="../portfolio/projects/billing_statements.html">Billing/Invoice Management</a></li>
+										<!--<li>
 											<a href="#">Java Based Libraries</a>
 											<ul>
 												<li><a href="#">JWT Auth Token Auto Refresh - Redis</a></li>
@@ -37,7 +37,7 @@
 												<li><a href="#">Quartz Scheduler</a></li>
 												<li><a href="#">Maintenance Mitigation</a></li>
 											</ul>
-										</li>
+										</li>-->
 									</ul>
 								</li>
 								<!--<li><a href="left-sidebar.html">Left Sidebar</a></li>
@@ -64,7 +64,7 @@
 						<li><strong>Data Processing Specialist</strong> with experience designing, developing, and maintaining Kafka, Quartz and Redis caching based messaging/streaming services, enhancing service availability and responsiveness by more than 50%.</li>
 						</ul>
 					<ul class="actions">
-						<li><a href="projects.html" class="button style3 large">Go to Projects</a></li>
+						<li><a href="projects.html" class="button style3 large">Projects</a></li>
 						<li><a href="https://flowcv.com/resume/0onlhsa9cf" target="_blank" class="button style1 large">Resume</a></li>
 					</ul>
 				</div>
@@ -131,7 +131,7 @@
 									</div>
 								</div>
 								<ul class="actions special">
-									<li><a href="projects.html" class="button style3 large">Go to Projects</a></li>
+									<li><a href="projects.html" class="button style3 large">Projects</a></li>
 									<li><a href="https://flowcv.com/resume/0onlhsa9cf" target="_blank" class="button style1 large">Resume</a></li>
 									<!--<li><a href="#" class="button style2 large">More Info</a></li>-->
 								</ul>
