--- a/projects/libraries.html
+++ b/projects/libraries.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>License Management</title>
+		<title>Libraries</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -19,35 +19,32 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="../index.html">Escape Velocity</a></h1>
-							<p>A free responsive site template by HTML5 UP</p>
+							<h1><a href="../index.html">WIP : Placeholder</a></h1>
+							<p></p>
 						</div>
 
 					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="../index.html">Home</a></li>
-								<li>
-									<a href="#">Dropdown</a>
-									<ul>
-										<li><a href="#">Lorem ipsum</a></li>
-										<li><a href="#">Magna veroeros</a></li>
-										<li><a href="#">Etiam nisl</a></li>
-										<li>
-											<a href="#">Sed consequat</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Amet consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Sed feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Nisl tempus</a></li>
-									</ul>
-								</li>
-							</ul>
-						</nav>
+					<nav id="nav">
+						<ul>
+							<li class="current"><a href="../index.html">Home</a></li>
+							<li>
+								<a href="#">Projects ↓ </a>
+								<ul>
+									<li><a href="../projects/license_mgmt.html">Kafka Based - License Lifecycle Management</a></li>
+									<li><a href="../projects/billing_statements.html">Billing/Invoice Management</a></li>
+									<!--<li>
+										<a href="#">Java Based Libraries</a>
+										<ul>
+											<li><a href="#">JWT Auth Token Auto Refresh - Redis</a></li>
+											<li><a href="#">Recovery/DLQ - Kafka</a></li>
+											<li><a href="#">Quartz Scheduler</a></li>
+											<li><a href="#">Maintenance Mitigation</a></li>
+										</ul>
+									</li>-->
+								</ul>
+							</li>
+						</ul>
+					</nav>
 
 				</section>
 
@@ -60,45 +57,15 @@
 							<div id="content">
 								<article class="box post">
 									<header class="style1">
-										<h2>Lorem ipsum dolor sit amet magna egestas<br class="mobile-hide" />
-										morbi bibendum sed malesuada</h2>
-										<p>Tempus feugiat veroeros sed nullam dolore</p>
+										<h2>Comprehensive suite of Java based reusable libraries</h2>
 									</header>
-									<a href="#" class="image featured">
-										<img src="images/pic01.jpg" alt="" />
-									</a>
-									<p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-									tempus euismod. Vestibulum ante ipsum primis in faucibus.</p>
-									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-									lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-									Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-									amet risus elit.</p>
-									<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-									ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-									eget quam rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus
-									eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis
-									tincidunt felis sagittis eget. Donec elementum ligula dignissim sem pulvinar non semper
-									odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum
-									facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-									tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-									posuere cubilia.</p>
-									<p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque
-									habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi
-									bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet. Aliquam eu nibh
-									lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor.
-									Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non
-									magna volutpat malesuada quis eget eros. Nullam sodales cursus sapien, id consequat
-									leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit
-									amet risus elit.</p>
 								</article>
 							</div>
-
+						<ul class="actions special">
+							<li><a href="../index.html" class="button style3 large">Home</a></li>
+							<li><a href="../projects.html" class="button style1 large">Projects</a></li>
+							<li><a href="https://flowcv.com/resume/0onlhsa9cf" target="_blank" class="button style3 large">Resume</a></li>
+						</ul>
 					</div>
 				</div>
 
