--- a/projects.html
+++ b/projects.html
@@ -31,17 +31,17 @@
 							<li>
 								<a href="#">Projects ↓ </a>
 								<ul>
-									<li><a href="#">Kafka Based - License Lifecycle Management</a></li>
-									<li><a href="#">Billing/Invoice Management</a></li>
-									<li>
-										<a href="#">Java Based Libraries</a>
-										<ul>
-											<li><a href="#">JWT Auth Token Auto Refresh - Redis</a></li>
-											<li><a href="#">Recovery/DLQ - Kafka</a></li>
-											<li><a href="#">Quartz Scheduler</a></li>
-											<li><a href="#">Maintenance Mitigation</a></li>
-										</ul>
-									</li>
+									<li><a href="../portfolio/projects/license_mgmt.html">Kafka Based - License Lifecycle Management</a></li>
+									<li><a href="../portfolio/projects/billing_statements.html">Billing/Invoice Management</a></li>
+									<!--<li>
+                                        <a href="#">Java Based Libraries</a>
+                                        <ul>
+                                            <li><a href="#">JWT Auth Token Auto Refresh - Redis</a></li>
+                                            <li><a href="#">Recovery/DLQ - Kafka</a></li>
+                                            <li><a href="#">Quartz Scheduler</a></li>
+                                            <li><a href="#">Maintenance Mitigation</a></li>
+                                        </ul>
+                                    </li>-->
 								</ul>
 							</li>
 							<!--<li><a href="left-sidebar.html">Left Sidebar</a></li>
