--- a/projects/billing_statements.html
+++ b/projects/billing_statements.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>License Management</title>
+		<title>Billing Statements</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="../index.html">License Lifecycle Management</a></h1>
+							<h1><a href="../index.html">Billing and Invoice Management</a></h1>
 							<p></p>
 						</div>
 
@@ -30,9 +30,9 @@
 							<li>
 								<a href="#">Projects ↓ </a>
 								<ul>
-									<li><a href="#">Kafka Based - License Lifecycle Management</a></li>
-									<li><a href="#">Billing/Invoice Management</a></li>
-									<li>
+									<li><a href="../projects/license_mgmt.html">Kafka Based - License Lifecycle Management</a></li>
+									<li><a href="../projects/billing_statements.html">Billing/Invoice Management</a></li>
+									<!--<li>
 										<a href="#">Java Based Libraries</a>
 										<ul>
 											<li><a href="#">JWT Auth Token Auto Refresh - Redis</a></li>
@@ -40,7 +40,7 @@
 											<li><a href="#">Quartz Scheduler</a></li>
 											<li><a href="#">Maintenance Mitigation</a></li>
 										</ul>
-									</li>
+									</li>-->
 								</ul>
 							</li>
 						</ul>
@@ -57,27 +57,68 @@
 							<div id="content">
 								<article class="box post">
 									<header class="style1">
-										<h2>Manage customer licenses using a Kafka Streaming application. Uses Redis and Caffeine</h2>
+										<h2>Manage customer invoices and process bill payments using 3rd party payment platforms.</h2>
 									</header>
-									<ul class="style3">
-										<li>This project is little advanced as it uses Kafka streaming and Kafka messaging technologies along with redis and caffeine caching wherever is necessary. It also houses factory and strategy interface design patterns to achieve efficient and clean code.</li>
-										<li>Customers uses the VoIP packages and services that we offer, most of the customers are of contact-center based, so they will have multiple users using cloud based voice services, PBX systems and more.</li>
-										<li>So, customers usually buy a lot of connections to accommodate all their users. For example 500 SKU A’s and 200 SKU B’s. And each SKU has its own capabilities.</li>
-										<li>These services that customer uses will be provisioned by the platform which provides licenses for each different service that customer bought.</li>
+									<ul class = "indent">
+										<li>Data Collection: Call Data Records and Licenses are gathered from platform and provisioning service for each customer. These are Kafka based messages which are processed and stored in our databases.</li>
+										<br><li>Usage Calculation: This data is used to generate and feed usage data.</li>
+										<br><li>Invoicing:
+											<ul class="indent">
+												<li>Payment Platform Integration: The system connects with a payment platform to fetch relevant invoice details.</li>
+												<li>Invoice Generation: Invoices are generated based on the services used and calculated usage.</li>
+											</ul>
+										</li>
 									</ul>
 									<a href="#" class="image centered">
-										<img src="../images/license_mgmt_pic.png" alt="" />
+										<img src="../images/billing_statements.png" alt="" />
 									</a>
-									<ul class="style3">
-										<li>Also, whenever there is a change in these licenses like adding more licenses, removing, upgrade/downgrade, swapping license capabilities etc., platform provides us the Kafka messages to a specific topic.</li>
-										<li>Usually there will be thousands of messages each minute and processing all of them will not be efficient. Also we don’t actually need to process all of these messages, so we use Kafka streaming application to process messages at the end of each time window and manipulate that message before further processin</li>
+									<ul class = "indent">
+										<li>Amount Due Check: The system assesses whether there is an amount due.
+											<ul class="indent">
+												<li>No Amount Due: If the amount is zero, the process ends.</li>
+												<li>Amount Due:
+													<ul>
+														<li>Messaging: A notification is sent to a messaging service (Kafka).</li>
+														<li>Billing Service: The message is consumed by a billing service.</li>
+														<li>Payment Data Retrieval: The system connects again with the payment platform to get invoice data.</li>
+														<li>ID Retrieval: Invoice IDs are obtained and will be used as primary keys.</li>
+													</ul>
+												</li>
+											</ul>
+										</li>
+										<li>Data Storage & Extraction:
+											<ul class="indent">
+												<li>Database Storage: Invoice data is stored in a database.</li>
+												<li>REST API Usage: REST APIs are employed to extract specific data using filters.</li>
+												<li>AWS S3 Storage: Data is also stored in AWS S3 buckets for potential future use.</li>
+											</ul>
+										</li>
+										<li>Customer Interaction:
+											<ul class="indent">
+												<li>Frontend Feeding: Data is fed to a frontend billing application.</li>
+												<li>Customer Actions: Customers can either view invoices or use an auto-pay feature.</li>
+											</ul>
+										</li>
+										<li>Payment Processing:
+											<ul class="indent">
+												<li>Payment Platform Notification: The payment platform is notified.</li>
+												<li>Payment Status Update: The payment status is updated in the system.</li>
+												<li>Transaction Successful: The process ends successfully.</li>
+												<li>Transaction Unsuccessful:
+													<ul>
+														<li>Customer Emails: Emails are sent to customers using SendGrid.</li>
+														<li>Abort and Notify: The process is aborted, the payment platform is notified, and a PagerDuty alert is raised.</li>
+													</ul>
+												</li>
+											</ul>
+										</li>
 									</ul>
 								</article>
 							</div>
 						<ul class="actions special">
 							<li><a href="../index.html" class="button style3 large">Home</a></li>
-							<li><a href="https://flowcv.com/resume/0onlhsa9cf" target="_blank" class="button style1 large">Resume</a></li>
-							<!--<li><a href="#" class="button style2 large">More Info</a></li>-->
+							<li><a href="../projects.html" class="button style1 large">Projects</a></li>
+							<li><a href="https://flowcv.com/resume/0onlhsa9cf" target="_blank" class="button style3 large">Resume</a></li>
 						</ul>
 					</div>
 				</div>
